# PromptLab

./: CMakeLists.txt  LICENSE  README.md
resources/: resources.qrc
resources/styles/: style.qss
src/: main.cpp
src/database/: database_manager.cpp  database_manager.h
src/model/: category.cpp  category.h  model_score.h  prompt.h  tag.h
src/repository/: category_repository.cpp  category_repository.h  model_score_repository.cpp  model_score_repository.h  prompt_repository.cpp  prompt_repository.h  tag_repository.cpp  tag_repository.h
src/service/: category_service.cpp  category_service.h  prompt_service.cpp  prompt_service.h  tag_service.cpp  tag_service.h
src/ui/: category_manager_dialog.cpp  category_manager_dialog.h  dashboard_widget.cpp  dashboard_widget.h  main_window.cpp  main_window.h  model_score_dialog.cpp  model_score_dialog.h  prompt_detail_widget.cpp  prompt_detail_widget.h  prompt_editor_dialog.cpp  prompt_editor_dialog.h  prompt_list_widget.cpp  prompt_list_widget.h  star_rating.cpp  star_rating.h  tag_manager_dialog.cpp  tag_manager_dialog.h
src/utils/: translation_manager.cpp  translation_manager.h
